# codecore

./: .gitignore  README.md  pyproject.toml
.codecore/: project.yaml
.codecore/mcp/: servers.yaml
.codecore/providers/: registry.yaml
docs/: architecture.md  best_practice.md  mvp-status.md  roadmap.md  start.md  threat-model.md
docs/adr/: 0001-hexagonal-runtime.md  0002-event-model.md  0003-memory-taxonomy.md  0004-llm-as-engine.md  0005-provider-fabric-and-broker.md  0006-context-and-skill-loading.md  0007-mcp-federation.md  0008-verification-and-policy-gates.md  0009-parallel-execution.md  0010-spec-driven-delivery.md  README.md
docs/best_practice/00_meta/: README.md  course_program.md  glossary.md  progress.md  reading_queue.md  source_digest.md  source_module_map.md  source_quality_map.md  study_guide.md  url_inventory.md
docs/best_practice/01_foundations/: 00_full_chapter.md  lesson_01_agent_loop.md  lesson_02_hooks_subagents.md  lesson_03_ai_engineering.md  lesson_04_reasoning_frameworks.md
docs/best_practice/02_methodology/: 00_full_chapter.md  (+4 more)
docs/schemas/: event.schema.json  mcp-server.schema.json  provider.schema.json  skill.schema.json
mcp/: servers.yaml
skills/arch/: SKILL.md
skills/backend/: SKILL.md
skills/review/: SKILL.md
skills/telegram/: SKILL.md
src/codecore/: __init__.py  __main__.py  app.py  bootstrap.py
tests/: test_agents.py  test_broker.py  test_context.py  test_execution.py  test_litellm_adapter.py  test_manifests.py  test_memory.py  test_security.py  test_skills.py  test_smoke.py  test_telemetry.py  test_ui.py
(+121 files in other folders)
